# legend-dataflow

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AGENTS.md  LICENSE.md  README.md  Snakefile  Snakefile-build-raw  codecov.yml  config-lngs.yaml  config-nersc.yaml  dataflow-config.yaml  pyproject.toml  raw_snakefile
.github/: dataflow-config-ci.yaml
.github/workflows/: main.yml
docs/: Makefile
docs/source/: conf.py  developer.rst  index.rst  pipeline.rst  user_manual.rst
profiles/build-raw/: config.yaml
profiles/default/: config.yaml
profiles/legend-data/: config.yaml  config.yml
rules/: ann.smk  blinding_calibration.smk  blinding_check.smk  build_raw.smk  chanlist_gen.smk  common.smk  dsp.smk  dsp_pars_geds.smk  evt.smk  filelist_gen.smk  hit.smk  main.smk  pht.smk  pht_fast.smk  psp.smk  qc_phy.smk  raw.smk  skm.smk  tcm.smk
scripts/: __init__.py  blinding_calibration.py  build_ann.py  build_dsp.py  build_evt.py  build_fdb.py  build_hit.py  build_raw.py  build_raw_blind.py  build_raw_fcio.py  build_raw_orca.py  build_skm.py  build_tcm.py  build_trim.py  check_blinding.py  complete_run.py  create_chankeylist.py  create_chanlist.py  create_daqlist.py  create_filelist.py  create_keylist.py  create_rawlist.py  gen_fileDB_config.py  merge_channels.py  par_psp.py  pars_dsp_build_svm.py  pars_dsp_build_svm_geds.py  pars_dsp_dplms.py  pars_dsp_egrids.py  pars_dsp_eopt.py  pars_dsp_event_selection.py  pars_dsp_nopt.py  pars_dsp_svm.py  pars_dsp_tau.py  pars_evt_xtc.py  pars_hit_aoe.py  pars_hit_ecal.py  pars_hit_lq.py  pars_hit_qc.py  pars_pht.py  (+9 more)
scripts/data_trimmer/: data_trimmer.py  test_data_trimmer.py
scripts/data_trimmer/test_data_trimmer_configs/: data_trimmer_config.json
scripts/util/: CalibCatalog.py  FileKey.py  Props.py  __init__.py  cal_grouping.py  catalog.py  convert_np.py  create_pars_keylist.py  dataset_cal.py  log.py  metadata_loading.py  pars_loading.py  patterns.py  utils.py
templates/: config-nersc.json  config.json
tests/: test_cal_grouping.py  test_convert_py.py  test_create_pars.py  test_execenv.py  test_filekey.py  test_pars_loading.py  test_util.py
tests/dummy_cycle/: config.json  config.yaml
tests/dummy_cycle/inputs/dataprod/overrides/: validity.jsonl
tests/dummy_cycle/inputs/dataprod/overrides/dsp/: validity.jsonl
tests/runprod/: conftest.sh  install.sh  run-all.sh  test-argon-char-dataprod.sh  test-build-raw.sh  test-evt.sh  test-raw.sh  test-skm.sh
workflow/: Snakefile  Snakefile-build-raw
workflow/profiles/default/: config.yaml
workflow/profiles/legend-data/: config.yaml
workflow/profiles/lngs/: config.yaml
workflow/profiles/lngs-build-raw/: config.yaml
workflow/profiles/sator/: config.yaml
workflow/rules/: ann.smk  blinding_calibration.smk  blinding_check.smk  chanlist_gen.smk  channel_merge.smk  common.smk  dsp.smk  dsp_pars_geds.smk  dsp_pars_spms.smk  evt.smk  filelist_gen.smk  hit.smk  hit_pars_geds.smk  main.smk  merge_in_channel.smk  pht.smk  pht_fast.smk  pht_pars_geds.smk  pht_pars_geds_fast.smk  psp.smk  psp_pars_geds.smk  qc_phy.smk  raw.smk  skm.smk  tcm.smk
workflow/scripts/: build_dsp.py  build_evt.py  build_hit.py  build_raw_blind.py  build_raw_fcio.py  build_raw_orca.py  build_skm.py  build_tcm.py  check_blinding.py  complete_run.py  merge_channels.py  par_psp_geds.py  pars_dsp_build_svm_geds.py  pars_dsp_dplms_geds.py  pars_dsp_eopt_geds.py  pars_dsp_event_selection.py  pars_dsp_evtsel_geds.py  pars_dsp_nopt_geds.py  pars_dsp_tau_geds.py  pars_hit_aoe.py  pars_hit_ecal.py  pars_hit_lq.py  pars_hit_qc.py  pars_pht_aoecal.py  pars_pht_fast.py  pars_pht_lqcal.py  pars_pht_partcal.py  pars_pht_qc.py  pars_pht_qc_phy.py  pars_tcm_pulser.py
workflow/src/legenddataflow/: FileKey.py  __init__.py  alias_table.py  build_chanlist.py  build_filelist.py  cal_grouping.py  cfgtools.py  convert_np.py  create_pars_keylist.py  execenv.py  log.py  pars_loading.py  paths.py  patterns.py  pre_compile_catalog.py  utils.py
workflow/src/legenddataflow/methods/: FileKey.py  __init__.py  cal_grouping.py  create_pars_keylist.py  pars_loading.py  paths.py  patterns.py
workflow/src/legenddataflow/scripts/: blinding_calibration.py  build_dsp.py  build_evt.py  build_fdb.py  build_hit.py  build_raw_blind.py  build_raw_fcio.py  build_raw_orca.py  build_skm.py  build_tcm.py  check_blinding.py  complete_run.py  create_chankeylist.py  filedb.py  merge_channels.py  par_psp_geds.py  pars_dsp_build_svm_geds.py  pars_dsp_dplms_geds.py  pars_dsp_eopt_geds.py  pars_dsp_evtsel_geds.py  pars_dsp_nopt_geds.py  pars_dsp_tau_geds.py  pars_hit_aoe.py  pars_hit_ecal.py  pars_hit_lq.py  pars_hit_qc.py  pars_pht_aoecal.py  pars_pht_fast.py  pars_pht_lqcal.py  pars_pht_partcal.py  pars_pht_qc.py  pars_pht_qc_phy.py  pars_tcm_pulser.py  pulser_removal.py  table_name.py  write_filelist.py
workflow/src/legenddataflow/scripts/flow/: build_chanlist.py  build_filelist.py  complete_run.py  merge_channels.py  merge_in_channel.py  utils.py  write_filelist.py
workflow/src/legenddataflow/scripts/par/geds/dsp/: dplms.py  eopt.py  evtsel.py  nopt.py  pz.py  svm.py  svm_build.py  tau.py
workflow/src/legenddataflow/scripts/par/geds/hit/: aoe.py  ecal.py  lq.py  qc.py
workflow/src/legenddataflow/scripts/par/geds/pht/: aoe.py  ecal_part.py  fast.py  lq.py  qc.py  qc_phy.py  util.py
workflow/src/legenddataflow/scripts/par/geds/psp/: average.py  dplms.py
workflow/src/legenddataflow/scripts/par/geds/raw/: blindcal.py  blindcheck.py  blinding_calibration.py  check_blinding.py
workflow/src/legenddataflow/scripts/par/geds/tcm/: pulser.py
workflow/src/legenddataflow/scripts/par/spms/dsp/: trigger_threshold.py
workflow/src/legenddataflow/scripts/tier/: dsp.py  evt.py  hit.py  raw_blind.py  raw_fcio.py  raw_orca.py  skm.py  tcm.py
