[tool.uv.workspace]
exclude = ["generated", "inputs", "software", "workflow"]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=7"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = [
    "LICENSE.md",
]
py-modules = []

[tool.setuptools.package-dir]
"" = "workflow/src"

[tool.setuptools.packages.find]
where = ["workflow/src"]

[tool.setuptools_scm]
write_to = "workflow/src/legenddataflow/_version.py"

[project]
name = "legend_dataflow"
description = "Python package for processing LEGEND-200 data"
authors = [
    {name = "George Marshall", email = "george.marshall.20@ucl.ac.uk"},
    {name = "Luigi Pertoldi", email = "gipert@pm.me"},
]
maintainers = [
    {name = "The LEGEND Collaboration"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
    "colorlog",
    "dbetto>=1.0.5",
    "pygama>=2",
    "dspeed>=1.6",
    "pylegendmeta==1.2.0a2",
    "legend-pydataobj>=1.11.4",
    "legend-daq2lh5>=1.4",
]

[project.optional-dependencies]
# these are needed to run the data production
runprod = [
    "snakemake>=8.16",
]
test = [
    "legend_dataflow[runprod]",
    "pytest>=6",
    "pytest-cov>=3",
]
dev = [
    "legend_dataflow[runprod,test]",
    "pre-commit",
]
docs = [
    "sphinx>=7.0",
    "myst_parser>=0.13",
    "sphinx_inline_tabs",
    "sphinx_copybutton",
    "sphinx_autodoc_typehints",
    "furo>=2023.08.17",
]

[project.scripts]
dataprod = "legenddataflow.execenv:dataprod"
